# test-gcp-cloudupload

./: .dockerignore  .gitignore  Dockerfile.api  README.md  TODO.md  docker-compose.ci.yml  docker-compose.yml  host-start-browser.sh  main.py  package-lock.json  package.json  plan.md  playwright.config.js  pyproject.toml  vite.config.js
.devcontainer/: .env.example  Dockerfile  devcontainer.json  post-create.sh
.github/skills/assistant-skills/: SKILL.md
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile.api  Dockerfile.prod  app.py  db.py  pyproject.toml  storage.py
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.jsx  AuthPanel.jsx  Dashboard.jsx  Uploader.jsx
frontend/: Dockerfile.ui  docker-entrypoint.sh  vite.config.js
frontend/src/: App.css  App.jsx  Uploader.jsx
legacy/: package-lock.json  package.json
legacy/src/middleware/: auth.js
legacy/src/routes/: config.js
public/: index.html
public/assets/: index-BUgbVCth.js  index-BVDldJ0D.js  index-uwqYSCDI.css
scripts/: bootstrap-tf-state.sh  deploy-nuke.sh  deploy-suspend.sh  deploy.sh  host-start-vscode.sh  nuke.sh  suspend-and-teardown.sh
skills/assistant-skills/: SKILL.md
src/: app.js  app.py  db.py  storage.py
src/middleware/: auth.js
src/routes/: config.js  uploads.js
terraform/: apis.tf  artifact_registry.tf  cdn.tf  cloud_run.tf  database.tf  iam.tf  main.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf  wif.tf
test/: fixtures.js  health.spec.js  health.test.js  test_health.py  test_ui.py  test_uploads.py  ui.integration.js  ui.spec.js  uploads.spec.js  uploads.test.js
test/helpers/: server.js  server.py
test/integration/: conftest.py  test_db.py  test_ui.py  test_uploads.py
test/integration/helpers/: server.py
test/unit/: conftest.py  test_db.py
